--- a/src/CompanyCommunicator.Functions.Prep/CompanyCommunicator.Functions.Prep.csproj
+++ b/src/CompanyCommunicator.Functions.Prep/CompanyCommunicator.Functions.Prep.csproj
@@ -23,6 +23,9 @@
     <PackageReference Include="Microsoft.ApplicationInsights.WorkerService" Version="2.23.0" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker.ApplicationInsights" Version="2.0.0" />
 
+    <!-- Pin System.Text.Json to resolve GHSA-8g4q-xg66-9fp4 (transitive 6.0.0 vulnerability) -->
+    <PackageReference Include="System.Text.Json" Version="8.0.5" />
+
     <!-- Azure Identity for Managed Identity -->
     <PackageReference Include="Azure.Identity" Version="1.17.1" />
 
