--- a/.github/workflows/deploy-app.yml
+++ b/.github/workflows/deploy-app.yml
@@ -274,6 +274,9 @@ jobs:
       - name: Install EF Core tools
         run: dotnet tool install --global dotnet-ef
 
+      - name: Restore packages for EF Core migrations
+        run: dotnet restore src/CompanyCommunicator.Api/CompanyCommunicator.Api.csproj
+
       - name: Run EF Core migrations
         env:
           ConnectionStrings__SqlConnection: ${{ secrets.SQL_CONNECTION_STRING }}
@@ -281,7 +284,6 @@ jobs:
           dotnet ef database update \
             --project src/CompanyCommunicator.Core/CompanyCommunicator.Core.csproj \
             --startup-project src/CompanyCommunicator.Api/CompanyCommunicator.Api.csproj \
-            --no-build \
             --verbose
 
       # -----------------------------------------------------------------------
