--- a/src/CompanyCommunicator.Api/CompanyCommunicator.Api.csproj
+++ b/src/CompanyCommunicator.Api/CompanyCommunicator.Api.csproj
@@ -46,6 +46,12 @@
 
     <!-- Observability -->
     <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.23.0" />
+
+    <!-- EF Core design-time tools (required for dotnet ef migrations) -->
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.11">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
