--- a/src/CompanyCommunicator.Api/appsettings.json
+++ b/src/CompanyCommunicator.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "SqlDb": "Server=tcp:{server}.database.windows.net,1433;Database=CompanyCommunicator;Authentication=Active Directory Managed Identity;TrustServerCertificate=False;"
+    "SqlConnection": "Server=tcp:{server}.database.windows.net,1433;Database=db-cc-dev;Authentication=Active Directory Managed Identity;TrustServerCertificate=False;"
   },
   "TokenValidation": {
     "Enabled": true,
@@ -33,8 +33,8 @@
   "ServiceBus": {
     "FullyQualifiedNamespace": "{{ServiceBusNamespace}}.servicebus.windows.net"
   },
-  "BlobStorage": {
-    "ServiceUri": "https://{{StorageAccountName}}.blob.core.windows.net"
+  "Storage": {
+    "AccountName": "{{StorageAccountName}}"
   },
   "Bot": {
     "AppId": "{{AppId}}",
